[package]
name = "launchpad"
version = "0.1.0"
edition = "2021"

[dependencies]
utilities = { path = "utilities" }
launchpad-derive = { path = "derive", default-features = false, optional = true}
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
thiserror = "1.0"
tracing = "0.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

derive_more = "0.99"
futures = "0.3"

# optional dependencies by feature
lapin = { version = "2.3", optional = true }
rocket = { version = "0.5", features = ["json"], optional = true }
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "json",
], optional = true }
tokio = { version = "1.38", features = ["full"], optional = true }

[dev-dependencies]
anyhow = "1.0"
tokio = { version = "1.38", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }

[features]
default = ["mq", "task", "pgsqlx"]
mq = ["dep:lapin"]
task = [ "dep:tokio" ]
pgsqlx = [ "launchpad-derive/pgsqlx", "dep:sqlx" ]

# [workspace]
# members = ["derive", "derive-tests", "utilities"]
