[package]
name = "launchpad"
version = "0.1.0"
edition = "2021"

[dependencies]
utilities = { path = "utilities" }

# required for everything
thiserror = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
derive_more = { version = "1.0.0", features = ["full"] }
futures = "0.3"

launchpad-derive = { path = "derive", default-features = false, optional = true }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "chrono",
], optional = true }

# optional dependencies by feature
lapin = { version = "2.3", optional = true }
rocket = { version = "0.5", features = ["json"], optional = true }
sqlx = { version = "0.8.0", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "json",
], optional = true }
tokio = { version = "1.40", features = ["full"], optional = true }
tracing-loki = { version = "0.2", optional = true }
hostname = {version = "0.4", optional = true }

[dev-dependencies]
anyhow = "1.0"
tokio = { version = "1.38", features = ["full"] }

[features]
# default = ["full"]
full = ["mq", "task", "pgsqlx", "tracing", "rocket"]
mq = ["dep:lapin"]
task = ["dep:tokio"]
pgsqlx = ["launchpad-derive/pgsqlx", "dep:sqlx"]
tracing = ["dep:tracing-subscriber", "dep:tracing-loki", "dep:hostname"]
rocket = ["dep:rocket"]

# [workspace]
# members = ["derive", "derive-tests", "utilities"]
